kafdrop/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-ui
  labels:
    app: kafka-ui
spec:
  type: ClusterIP
  ports:
  - protocol: TCP
    targetPort: 9000
    port: 9000
  selector:
    app: kafka-ui
